Fixed https://github.com/codecrafter404/GyKl-Helper/issues/1#issue-992376850, added authentication through MD5 Hash